--- a/application/css/LightStyle.css
+++ b/application/css/LightStyle.css
@@ -134,8 +134,9 @@ body {
 }
 
 #changeStyleButton {
+	float: right;
 	padding: 1% 1% 1% 1%;
-	margin: 1% 1% 1% 1%;
+	margin-left: 1%;
 	color: var(--buttonBackground) !important;
 	border-color: var(--buttonBackground) !important;
 }
